--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>SpringUserHibernate</artifactId>
 	<packaging>war</packaging> 
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringUserHibernate Maven Webapp</name> 
+	<name>SpringUserHibernateMavenWebapp</name> 
 	<url>http://maven.apache.org</url>
 	<properties>
 		<java-version>1.7</java-version>
@@ -48,6 +48,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.2.0.Final</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-tx</artifactId>
+		    <version>4.1.0.RELEASE</version>
+		</dependency>
+		
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -99,6 +105,18 @@
 			<version>2.2.3</version>
 
 		</dependency>
+		<dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.6.2</version>
+    </dependency>
+		<!-- Jackson JSON Mapper -->  
+  <dependency>  
+   <groupId>org.codehaus.jackson</groupId>  
+   <artifactId>jackson-mapper-asl</artifactId>  
+   <version>1.9.10</version>  
+  </dependency>  
+  
 		<!-- File Upload Jars -->
 		<!--<dependency>
 			<groupId>org.apache.commons</groupId>
